--- a/flaskr/static/css/_layout.scss
+++ b/flaskr/static/css/_layout.scss
@@ -18,6 +18,7 @@ $headlineColor: #33272a;
     }
     #footer{
         margin:0 auto;
+        padding: 10px 0;
         background-color:$headlineColor;
         color:white;
         width: 100%;
