--- a/flaskr/static/css/style.scss
+++ b/flaskr/static/css/style.scss
@@ -5,4 +5,10 @@
 @import "log";
 @import "login";
 @import "register";
+@import "blogprofile";
+@import "authprofile";
+@import "order";
+@import "detail";
+@import "check";
+@import "update";
 @import "btn";
