--- a/flaskr/templates/blog/profile.html
+++ b/flaskr/templates/blog/profile.html
@@ -11,14 +11,28 @@
 {% endblock %}
 
 {% block content %}
-
-<img src="{{url_for('static', filename='img/type/'+ img_type + '_' + img_gender + '.jpg') }}" width="500" alt="">
-<h1>{{ user_name }}さん</h1>
-<p>あなたは{{bmi_type}}です<br>{{disc_type}}<p>
-
-<p><a href={{url_for('blog.menu', user_name=user_name, bmi=bmi, eat_time="morning")}}>明日の朝食を決める</a></p>
-<p><a href={{url_for('blog.menu', user_name=user_name, bmi=bmi, eat_time="lunch")}}>明日の昼食を決める</a></p>
-<p><a href={{url_for('blog.menu', user_name=user_name, bmi=bmi, eat_time="dinner")}}>明日の夜食を決める</a></p>
+<div class="img">
+    <img class="img_size" src="{{url_for('static', filename='img/type/'+ img_type + '_' + img_gender + '.jpg') }}" alt="">
+</div>
+<div class="main-text text-center profile_content">
+    <h1>{{ user_name }}さん</h1>
+    <p>あなたは{{bmi_type}}です<br>{{disc_type}}<p>
+    <div class="button_content mt-5">
+        <a href={{url_for('blog.menu', user_name=user_name, bmi=bmi, eat_time="morning")}} class="button_link">
+            <p class="button_text">明日の朝食を決める</p>
+        </a>
+    </div>
+    <div class="button_content mt-5">
+        <a href={{url_for('blog.menu', user_name=user_name, bmi=bmi, eat_time="lunch")}} class="button_link">
+            <p class="button_text">明日の昼食を決める</p>
+        </a>
+    </div>
+    <div class="button_content mt-5">
+        <a href={{url_for('blog.menu', user_name=user_name, bmi=bmi, eat_time="dinner")}} class="button_link">
+            <p class="button_text">明日の夕食を決める</p>
+        </a>
+    </div>
+</div>
 
 {% endblock %}
 
