--- a/flaskr/templates/layout.html
+++ b/flaskr/templates/layout.html
@@ -15,6 +15,8 @@
   <header id="header">   
     <nav class="navbar navbar-dark top_nav">
       <a class="navbar-brand" href="#!">Health Check Delivery</a>
+      {% block header %}
+      {% endblock %}
     </nav>
   </header>
   <main id="main">
