ほぼほぼ完成

--- a/flaskr/static/css/_allergies.scss
+++ b/flaskr/static/css/_allergies.scss
@@ -4,6 +4,8 @@ $buttontextColor: #33272a;
 $paragraphColor: #594a4e;
 $headlineColor: #33272a;
 
-.profile_text{
+.allergies_text{
     color: $paragraphColor;
+    width: 90%;
+    margin: 0 auto;
 }
