--- a/flaskr/static/css/_order.scss
+++ b/flaskr/static/css/_order.scss
@@ -28,3 +28,13 @@ $headlineColor: #33272a;
     }
 }
 
+.order_text{
+    color: $paragraphColor;
+    width: 90%;
+    margin: 0 auto;
+}
+
+.order_back{
+    background-color: $backgroundColor !important;
+}
+
