--- a/flaskr/templates/auth/description.html
+++ b/flaskr/templates/auth/description.html
@@ -3,6 +3,11 @@
 
 <h1>Health Check Delivery とは？</h1>
 <p>アプリケーションの説明</p>
-<a href={{url_for('auth.register')}}>はじめる</a>
+<div class="button_content mt-5">
+    <a href={{url_for('auth.register')}} class="button_link">
+      <p class="button_text button_size">はじめる</p>
+    </a>
+</div>
 
 {% endblock %}
+
