--- a/flaskr/templates/auth/login.html
+++ b/flaskr/templates/auth/login.html
@@ -22,15 +22,15 @@
 
 
   <form method="post" class="login_form">
-    <div class="form-group">
+    <div class="form-group login_text mt-3">
       <label for="username">ユーザ名</label>
       <input name="username" type="text" class="form-control" id="formGroupExampleInput" placeholder="ユーザ名を入力してください" required>
     </div>
-    <div class="form-group">
+    <div class="form-group login_text mt-3">
       <label for="password">パスワード</label>
       <input type="password" name="password" type="text" class="form-control" id="formGroupExampleInput2" placeholder="パスワードを入力してください" required>
     </div>
-    <button type="submit" class="btn btn-outline-danger" value="ログイン">ログイン</button>
+    <button type="submit" class="btn btn-outline-danger mt-3" value="ログイン">ログイン</button>
   </form>
 
 
