--- a/flaskr/templates/auth/profile.html
+++ b/flaskr/templates/auth/profile.html
@@ -18,23 +18,23 @@
 -->
 
   <form method="post" class="login_form">
-    <div class="form-group">
+    <div class="form-group profile_text mt-3">
       <label for="weight">体重（kg）</label>
       <input name="weight" class="form-control" id="formGroupExampleInput" placeholder="体重を入力してください" required>
     </div>
-    <div class="form-group">
+    <div class="form-group profile_text mt-3">
       <label for="height">身長（cm）</label>
       <input name="height" class="form-control" id="formGroupExampleInput2" placeholder="身長を入力してください" required>
     </div>
-    <div class="custom-control custom-radio">
-      <input type="radio" id="customRadio1" name="gender" class="custom-control-input" value="male">
+    <div class="custom-control custom-radio profile_text mt-3">
+      <input type="radio" id="customRadio1" name="gender" class="custom-control-input" value="male" required>
       <label class="custom-control-label" for="customRadio1">男性</label>
     </div>
-    <div class="custom-control custom-radio">
-      <input type="radio" id="customRadio2" name="gender" class="custom-control-input" value="female">
+    <div class="custom-control custom-radio profile_text mt-3">
+      <input type="radio" id="customRadio2" name="gender" class="custom-control-input" value="female" required>
       <label class="custom-control-label" for="customRadio2">女性</label>
     </div>
-    <button type="submit" class="btn btn-outline-danger" value="アレルギー設定へ">アレルギー設定へ</button>
+    <button type="submit" class="btn btn-outline-danger mt-3" value="アレルギー設定へ">アレルギー設定へ</button>
   </form>
 
 {% endblock %}
