--- a/flaskr/static/css/_blogprofile.scss
+++ b/flaskr/static/css/_blogprofile.scss
@@ -1,3 +1,10 @@
+$backgroundColor:#faeee7;
+$buttonColor:#ff8ba7;
+$buttontextColor: #33272a;
+$paragraphColor: #594a4e;
+$headlineColor: #33272a;
+
+
 .img{
     width: 40%;
     margin: 0 auto;
@@ -9,4 +16,16 @@
 .profile_content{
     width: 90%;
     margin: 0 auto;
+}
+
+.blogprofile_text{
+    color: $paragraphColor;
+}
+
+.button_size{
+    font-size: 13px;
+}
+
+.blogprofile_back{
+    background-color: $backgroundColor !important;
 }
