--- a/flaskr/static/css/_status.scss
+++ b/flaskr/static/css/_status.scss
@@ -4,16 +4,10 @@ $buttontextColor: #33272a;
 $paragraphColor: #594a4e;
 $headlineColor: #33272a;
 
-#check_content_inner{
-    background-color: $backgroundColor;
-    width: 80%;
-    margin: 0 auto;
-}
-
-.check_text{
+.status_text{
     color: $paragraphColor;
 }
 
-.check_back{
+.status_back{
     background-color: $backgroundColor !important;
 }
