--- a/flaskr/static/css/_update.scss
+++ b/flaskr/static/css/_update.scss
@@ -2,3 +2,17 @@
     width: 80%;
     margin: 0 auto;
 }
+
+.label{ 
+    display:block;
+    position:relative;
+    padding-left:1em;
+}
+
+.update_text{
+    color: $paragraphColor;
+}
+
+.update_back{
+    background-color: $backgroundColor !important;
+}
