--- a/flaskr/templates/auth/allergies.html
+++ b/flaskr/templates/auth/allergies.html
@@ -1,7 +1,10 @@
 {% extends "layout.html" %}
 {% block content %}
 
-  <h1>アレルギーを選択してください</h1>
+<div class="allergies">
+  <h1 class="text-center allergies_text mt-5">アレルギーを<br>選択してください</h1>
+</div>
+
 
 <!--
   <form method="post">
@@ -15,37 +18,62 @@
     <input type="submit" value="設定を終了する">
   </form>
 -->
-
   <form method="post" class="login_form">
-    <div class="custom-control custom-checkbox">
+    <!--
+    <div class="custom-control custom-checkbox allergies_text mt-3">
       <input type="checkbox" class="custom-control-input" id="customCheck1" name="allergies" value="egg">
       <label class="custom-control-label" for="customCheck1">たまご</label>
     </div>
-    <div class="custom-control custom-checkbox">
+    <div class="custom-control custom-checkbox allergies_text mt-3">
       <input type="checkbox" class="custom-control-input" id="customCheck1" name="allergies" value="milk">
       <label class="custom-control-label" for="customCheck1">ミルク</label>
     </div>
-    <div class="custom-control custom-checkbox">
+    <div class="custom-control custom-checkbox allergies_text mt-3">
       <input type="checkbox" class="custom-control-input" id="customCheck1" name="allergies" value="wheat">
       <label class="custom-control-label" for="customCheck1">小麦</label>
     </div>
-    <div class="custom-control custom-checkbox">
+    <div class="custom-control custom-checkbox allergies_text mt-3">
       <input type="checkbox" class="custom-control-input" id="customCheck1" name="allergies" value="shrimp">
       <label class="custom-control-label" for="customCheck1">エビ</label>
     </div>
-    <div class="custom-control custom-checkbox">
+    <div class="custom-control custom-checkbox allergies_text mt-3">
       <input type="checkbox" class="custom-control-input" id="customCheck1" name="allergies" value="crab">
       <label class="custom-control-label" for="customCheck1">カニ</label>
     </div>
-    <div class="custom-control custom-checkbox">
+    <div class="custom-control custom-checkbox allergies_text mt-3">
       <input type="checkbox" class="custom-control-input" id="customCheck1" name="allergies" value="peanuts">
       <label class="custom-control-label" for="customCheck1">ピーナッツ</label>
     </div>
-    <div class="custom-control custom-checkbox">
+    <div class="custom-control custom-checkbox allergies_text mt-3">
       <input type="checkbox" class="custom-control-input" id="customCheck1" name="allergies" value="soba">
       <label class="custom-control-label" for="customCheck1">蕎麦</label>
+    </div>-->
+
+    <div>
+      <label>
+        <input type="checkbox" name="allergies" value="egg" class="mt-3">たまご
+      </label>
+      <label>
+        <input type="checkbox" name="allergies" value="milk" class="mt-3">ミルク
+      </label>
+      <label>
+        <input type="checkbox" name="allergies" value="wheat" class="mt-3">小麦
+      </label>
+      <label>
+        <input type="checkbox" name="allergies" value="shrimp" class="mt-3">えび
+      </label>
+      <label>
+        <input type="checkbox" name="allergies" value="crab" class="mt-3">かに
+      </label>
+      <label>
+        <input type="checkbox" name="allergies" value="peanuts" class="mt-3">落花生(ピーナッツ)
+      </label>
+      <label>
+        <input type="checkbox" name="allergies" value="soba" class="mt-3">そば
+      </label>
     </div>
-    <button type="submit" class="btn btn-outline-danger" value="ログイン">ログイン</button>
+
+    <button type="submit" class="btn btn-outline-danger mt-3" value="ログイン">ログイン</button>
   </form>
 
 {% endblock %}
