--- a/flaskr/templates/auth/register.html
+++ b/flaskr/templates/auth/register.html
@@ -23,23 +23,23 @@
 -->
 
   <form method="post" class="login_form">
-    <div class="form-group mt-3">
+    <div class="form-group profile_text mt-3">
       <label for="username">ユーザ名</label>
       <input name="username" type="text" class="form-control" id="formGroupExampleInput" placeholder="ユーザ名を入力してください" required>
     </div>
-    <div class="form-group mt-3">
+    <div class="form-group profile_text mt-3">
       <label for="password">パスワード</label>
       <input name="password" type="password" class="form-control" id="formGroupExampleInput2" placeholder="パスワードを入力してください" required>
     </div>
-    <div class="form-group mt-3">
+    <div class="form-group profile_text mt-3">
       <label for="address">住所</label>
       <input name="address" type="text" class="form-control" id="formGroupExampleInput2" placeholder="住所を入力してください" required>
     </div>
-    <div class="form-group mt-3">
+    <div class="form-group profile_text mt-3">
       <label for="tel">電話番号</label>
       <input name="tel" type="text" class="form-control" id="formGroupExampleInput2" placeholder="電話番号を入力してください" required>
     </div>
-    <div class="form-group mt-3">
+    <div class="form-group profile_text mt-3">
       <label for="mail">メールアドレス（任意）</label>
       <input name="mail" type="text" class="form-control" id="formGroupExampleInput2" placeholder="メールアドレスを入力してください">
     </div>
