--- a/flaskr/static/css/_layout.scss
+++ b/flaskr/static/css/_layout.scss
@@ -33,3 +33,10 @@ $headlineColor: #33272a;
     background-color: $backgroundColor !important;
 }
 
+@media(min-width: 768px) {
+    #main{
+        width: 50%;
+        margin: 0 auto;
+    }
+}
+
