--- a/flaskr/templates/blog/detail.html
+++ b/flaskr/templates/blog/detail.html
@@ -39,7 +39,7 @@
 <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 {% endif %}
 
-<div id="detail_content" class="card">
+<div id="detail_content" class="card mt-5">
   <div class="card-body">
     <div class="detail_img"><img class="img" src="{{url_for('static', filename='img/menu/' + menu["img"]) }}" alt=""></div>
     <h4 class="card-title detail_text mt-3">{{menu["menuname"]}}</h4>
