--- a/flaskr/static/css/_top.scss
+++ b/flaskr/static/css/_top.scss
@@ -25,6 +25,13 @@ sans-serif;
     }
 }
 
+@media(min-width: 768px) {
+    .logo{
+        // width: 10%;
+        margin-top: 50px;
+    }
+}
+
 .title{
     color: $paragraphColor;
     font-family: 'Chalkboard';
@@ -39,22 +46,5 @@ sans-serif;
 }
 
 
-#body{
-    background-color: $backgroundColor;
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-    #main{
-        flex: 1;
-    }
-    #footer{
-        margin:0 auto;
-        background-color:$headlineColor;
-        color:white;
-        width: 100%;
-        // bottom: 0; /*下に固定*/
-        text-align: center;
-        // margin-top: 100px;
-    }
-}
+
 
