--- a/flaskr/templates/blog/order.html
+++ b/flaskr/templates/blog/order.html
@@ -4,6 +4,8 @@
 <li class="list-group-item order_back"><a href={{url_for('blog.update_1', user_name=user_name)}}>プロフィール編集</a></li>
 <li class="list-group-item order_back"><a href={{url_for('blog.log', user_name=user_name)}}>注文履歴</a></li>
 <li class="list-group-item order_back"><a href={{url_for('blog.status', user_name=user_name)}}>配達状況</a></li>
+<li class="list-group-item layout_back"><a href={{url_for('blog.question', user_name=user_name)}}>Q&A</a></li>
+<li class="list-group-item layout_back"><a href={{url_for('blog.terms', user_name=user_name)}}>利用規約</a></li>
 {% endblock %}
 {% block content %}
 
