--- a/flaskr/templates/layout.html
+++ b/flaskr/templates/layout.html
@@ -30,8 +30,19 @@
       <div class="collapse navbar-collapse" id="navmenu1">
         <div class="navbar-nav">
           <ul class="navbar-nav ml-auto list-group ">
-              {% block header %}
-              {% endblock %}
+          {% if user_name and user_name != "None" %}
+            <li class="list-group-item status_back"><a href={{url_for('blog.index')}}>ログアウト</a></li>
+            <li class="list-group-item status_back"><a href={{url_for('blog.update_1', user_name=user_name)}}>プロフィール編集</a></li>
+            <li class="list-group-item status_back"><a href={{url_for('blog.log', user_name=user_name)}}>注文履歴</a></li>
+            <li class="list-group-item status_back"><a href={{url_for('blog.status', user_name=user_name)}}>配達状況</a></li>
+          {% endif %}
+          {% if not user_name or user_name == "None" %}
+            <li class="list-group-item layout_back"><a href={{url_for('blog.question', user_name="None")}}>Q&A</a></li>
+            <li class="list-group-item layout_back"><a href={{url_for('blog.terms', user_name="None")}}>利用規約</a></li>
+          {% else %}
+            <li class="list-group-item layout_back"><a href={{url_for('blog.question', user_name=user_name)}}>Q&A</a></li>
+            <li class="list-group-item layout_back"><a href={{url_for('blog.terms', user_name=user_name)}}>利用規約</a></li>
+          {% endif %}
           </ul>
         </div>
       </div>
