ユーザストーリ動画を載せた

--- a/flaskr/templates/auth/description.html
+++ b/flaskr/templates/auth/description.html
@@ -3,6 +3,10 @@
 
 <h1 class="description_title text-center mt-5">Health Check Delivery とは？</h1>
 <div class="use_video mt-5">
+  <video class="video" src="{{url_for('static', filename='img/description/story.mp4') }}" poster="{{url_for('static', filename='img/description/story_img.png') }}" controls></video>
+  <p class="text-center">まずはこちらを見よう！</p>
+</div>
+<div class="use_video mt-5">
   <video class="video" src="{{url_for('static', filename='img/description/use.mp4') }}" poster="{{url_for('static', filename='img/description/use_img.png') }}" controls></video>
   <p class="text-center">使い方はこちら！</p>
 </div>
